# EKA2L1

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  clang-format-all.sh
.github/workflows/: build.yml
cmake/: DeveloperTools.cmake  DolphinPostprocessBundle.cmake  FindLibClang.cmake  MacOSAdHocSignBundle.cmake  ProjectOptions.cmake  RunClangFormat.cmake
docs/: PLATFORM_MATRIX.md  VULKAN_DEBUG.md
miscs/compat/: README.md
native/BitmapCanavas/src/: main.cpp
native/EKA2L1HWD/inc/: EKA2L1HW.h
native/EKA2L1HWD/src/: EKA2L1HW.cpp
native/ITried/inc/: ITriedAppUi.h  ITriedAppView.h  ITriedApplication.h  ITriedDocument.h
native/ITried/src/: ITriedAppUi.cpp  ITriedAppView.cpp
native/SoundTest/src/: soundtest.cpp
native/WindowInputTest/src/: main.cpp
src/emu/: CMakeLists.txt
src/emu/common/: CMakeLists.txt
src/emu/cpu/: CMakeLists.txt
src/emu/disasm/: CMakeLists.txt
src/emu/dispatch/: CMakeLists.txt
src/emu/drivers/: CMakeLists.txt
src/emu/drivers/include/drivers/: driver.h  ffmpeg_compat.h  itc.h
src/emu/drivers/include/drivers/audio/: audio.h  common.h  dsp.h  player.h  recorder.h  stream.h
src/emu/drivers/include/drivers/audio/backend/: baeplat_impl.h  dsp_shared.h  player_shared.h
src/emu/drivers/include/drivers/audio/backend/cubeb/: audio_cubeb.h  stream_cubeb.h
src/emu/drivers/include/drivers/audio/backend/ffmpeg/: dsp_ffmpeg.h  player_ffmpeg.h
src/emu/drivers/include/drivers/audio/backend/ios/: audio_ios.h
src/emu/drivers/include/drivers/audio/backend/minibae/: player_minibae.h
src/emu/drivers/include/drivers/audio/backend/minibae/machine/: types.h
src/emu/drivers/include/drivers/audio/backend/sdl2/: audio_sdl2.h
src/emu/drivers/include/drivers/audio/backend/tinysoundfont/: player_tsf.h
src/emu/drivers/include/drivers/audio/backend/wmf/: player_wmf.h  wmf_loader.h
src/emu/drivers/include/drivers/camera/: camera.h  camera_collection.h
src/emu/drivers/include/drivers/camera/backend/android/: camera_android.h  camera_collection_android.h
src/emu/drivers/include/drivers/camera/backend/ios/: camera_ios.h
src/emu/drivers/include/drivers/camera/backend/null/: camera_collection_null.h
src/emu/drivers/include/drivers/graphics/: buffer.h  common.h  emu_window.h  fb.h  graphics.h  input_desc.h  shader.h  texture.h
src/emu/drivers/include/drivers/graphics/backend/: graphics_driver_shared.h
src/emu/drivers/include/drivers/graphics/backend/native/: graphics_native.h
src/emu/drivers/include/drivers/graphics/backend/vulkan/: buffer_vulkan.h  fb_vulkan.h  graphics_vulkan.h  input_desc_vulkan.h  shader_vulkan.h  texture_vulkan.h
src/emu/drivers/include/drivers/hwrm/backend/: vibration_sdl2.h
src/emu/drivers/include/drivers/hwrm/backend/ios/: vibration_ios.h
src/emu/drivers/include/drivers/input/: common.h  emu_controller.h
src/emu/drivers/include/drivers/input/backend/: emu_controller_sdl2.h
src/emu/drivers/include/drivers/sensor/: sensor.h
src/emu/drivers/include/drivers/ui/: input_dialog.h
src/emu/drivers/include/drivers/video/: video.h
src/emu/drivers/include/drivers/video/backend/ffmpeg/: video_player_ffmpeg.h
src/emu/drivers/src/: itc.cpp  sdl2_scoping.cpp  sdl2_scoping.h
src/emu/drivers/src/audio/: audio.cpp  dsp.cpp  player.cpp  stream.cpp
src/emu/drivers/src/audio/backend/: bae_platimpl.cpp  dsp_shared.cpp  player_shared.cpp
src/emu/drivers/src/audio/backend/cubeb/: audio_cubeb.cpp  stream_cubeb.cpp
src/emu/drivers/src/audio/backend/ffmpeg/: dsp_ffmpeg.cpp  player_ffmpeg.cpp
src/emu/drivers/src/audio/backend/ios/: audio_ios.mm
src/emu/drivers/src/audio/backend/minibae/: player_minibae.cpp
src/emu/drivers/src/audio/backend/sdl2/: audio_sdl2.cpp
src/emu/drivers/src/audio/backend/tinysoundfont/: player_tsf.cpp
src/emu/drivers/src/audio/backend/wmf/: player_wmf.cpp  wmf_loader.cpp
src/emu/drivers/src/camera/: camera_collection.cpp
src/emu/drivers/src/camera/backend/android/: camera_android.cpp  camera_collection_android.cpp  emulator_camera_jni.cpp
src/emu/drivers/src/camera/backend/ios/: camera_ios.mm
src/emu/drivers/src/graphics/: buffer.cpp  emu_window.cpp  fb.cpp  graphics.cpp  input_desc.cpp  shader.cpp  texture.cpp
src/emu/drivers/src/graphics/backend/: graphics_driver_shared.cpp
src/emu/drivers/src/graphics/backend/native/: graphics_native.cpp
src/emu/drivers/src/graphics/backend/texture/: etcdec.cxx  pvrt-dec.cpp
src/emu/drivers/src/graphics/backend/vulkan/: buffer_vulkan.cpp  fb_vulkan.cpp  graphics_vulkan.cpp  graphics_vulkan_macos.h  graphics_vulkan_macos.mm  input_desc_vulkan.cpp  shader_vulkan.cpp  texture_vulkan.cpp
src/emu/drivers/src/hwrm/: vibration.cpp
src/emu/drivers/src/hwrm/backend/: vibration_null.cpp  vibration_sdl2.cpp
src/emu/drivers/src/hwrm/backend/ios/: vibration_ios.mm
src/emu/drivers/src/input/: common.cpp  emu_controller.cpp
src/emu/drivers/src/input/backend/: emu_controller_sdl2.cpp
src/emu/drivers/src/sensor/: sensor.cpp
src/emu/drivers/src/sensor/backend/android/: sensor_android.cpp  sensor_android.h
src/emu/drivers/src/sensor/backend/ios/: sensor_ios.h  sensor_ios.mm
src/emu/drivers/src/sensor/backend/null/: sensor_null.cpp  sensor_null.h
src/emu/drivers/src/ui/: input_dialog_null.cpp
src/emu/drivers/src/video/: video.cpp
src/emu/drivers/src/video/backend/ffmpeg/: video_player_ffmpeg.cpp
src/emu/gdbstub/: CMakeLists.txt
src/emu/gdbstub/include/gdbstub/: gdbstub.h
src/emu/gdbstub/src/: gdbstub.cpp
src/emu/ios/: CMakeLists.txt  Info.plist.in
src/emu/ios/include/ios/: emu_window_ios.h  input_dialog.h  launcher.h  state.h  thread.h
src/emu/ios/src/: applauncher.mm  emu_window_ios.mm  input_dialog.mm  launcher.cpp  main.mm  state.cpp  thread.cpp
src/emu/kernel/: CMakeLists.txt
src/emu/qt/: CMakeLists.txt  version.h
src/emu/vita/: CMakeLists.txt
src/emu/vita/include/vita/: emu_window_vita.h  state.h  thread.h
src/emu/vita/src/: emu_window_vita.cpp  main.cpp  state.cpp  thread.cpp
src/tests/: CMakeLists.txt  tests.cpp
tools/ios/: build_ffmpeg_ios.sh
(+1088 files in other folders)
